CLIENT-1322: fix get verified btn jumping

--- a/src/modules/utils/modals/receive/Receive.less
+++ b/src/modules/utils/modals/receive/Receive.less
@@ -15,6 +15,19 @@ md-dialog.modal-receive {
       height: 100%;
     }
 
+    .button-wrapper-height {
+      height: 54px;
+
+      a {
+        position: absolute;
+        left:0;
+        top:0;
+        width: 100%;
+        display: block;
+        height: 54px;
+      }
+    }
+
     .modal-content {
       overflow: auto;
     }
